fix: adapt code for MC 1.19.2 API (Registry, loot-api-v1)